Fix definitivi SonarCloud GUI e rimozione Code Smells